Thu May 24 12:28:35 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc,
	  queryparser/termgenerator_internal.cc,
	  queryparser/termgenerator_internal.h: Add
	  TermGenerator::set_stemming_strategy() method, with strategies which
	  correspond to those of QueryParser.  Based on patch from Sehaj Singh
	  Kalra, with some tweaks for adding term positions in more cases.
	  (Fixes ticket#563)
	* tests/termgentest.cc: Add test coverage for the new features.

Thu May 24 01:37:31 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add doc comment for stem_strategy
	  typedef.

Wed May 23 11:33:08 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.lemony:
	  Add new QueryParser::STEM_ALL_Z stemming strategy, which stems all
	  terms and adds a Z prefix.  (Patch from Sehaj Singh Kalra, fixes
	  ticket#562)
	* tests/queryparsertest.cc: Add test coverage for
	  QueryParser::STEM_ALL_Z.

Wed May 23 05:37:20 GMT 2012  Olly Betts <olly@survex.com>

	* api/valuesetmatchdecider.cc,include/xapian/valuesetmatchdecider.h:
	  "Limited" to "Ltd" in (C) two statements, for consistency (and with
	  Charlie's agreement on IRC).

Wed May 23 02:25:53 GMT 2012  Olly Betts <olly@survex.com>

	* api/,include/xapian/query.h: Rework QueryBranch to use a special
	  QueryVector class rather than std::vector<Xapian::Query>.  The
	  special class is no bigger than std::vector<Xapian::Query>, and
	  handles up to two entries by holding them within the object (at
	  least GCC's std::vector doesn't currently do this space optimisation)
	  which significantly reduces the memory used by a pairwise operator,
	  which is very desirable as we no longer flatten a tree of the same
	  pairwise operator as we build the query.

Tue May 22 06:25:10 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryinternal.cc: Handle the left side of AND_NOT and